--- a/src/main/resources/ChooseBookingData.fxml
+++ b/src/main/resources/ChooseBookingData.fxml
@@ -11,28 +11,28 @@
 
 <AnchorPane prefHeight="570.0" prefWidth="320.0" style="-fx-background-color: GREEN;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.connect5_project.gui_cntrollers.ChooseBookingDataGUI">
    <children>
-      <HBox alignment="CENTER" prefHeight="102.0" prefWidth="320.0" style="-fx-background-color: BLACK;">
-         <children>
-            <Label prefHeight="40.0" prefWidth="262.0" text="CONNECT 5" textFill="WHITE">
-               <font>
-                  <Font name="Stalin One" size="25.0" />
-               </font>
-            </Label>
-         </children>
-      </HBox>
       <ImageView fitHeight="468.0" fitWidth="320.0" layoutY="102.0">
          <image>
             <Image url="@images/campo_progetto.jpg" />
          </image>
       </ImageView>
+      <HBox alignment="CENTER" prefHeight="102.0" prefWidth="320.0" style="-fx-background-color: BLACK;">
+         <children>
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="40.0" prefWidth="262.0" text="CONNECT 5" textAlignment="CENTER" textFill="WHITE">
+               <font>
+                  <Font name="Showcard Gothic" size="38.0" />
+               </font>
+            </Label>
+         </children>
+      </HBox>
       <Button fx:id="btnSearch" contentDisplay="CENTER" layoutX="113.0" layoutY="353.0" mnemonicParsing="false" onAction="#search" prefHeight="40.0" prefWidth="90.0" style="-fx-background-color: BLACK; -fx-background-radius: 15;" text="Search" textAlignment="CENTER" textFill="WHITE">
          <font>
-            <Font name="Sarpanch" size="12.0" />
+            <Font name="Showcard Gothic" size="12.0" />
          </font>
       </Button>
-      <Label alignment="CENTER" layoutX="57.0" layoutY="174.0" prefHeight="26.0" prefWidth="201.0" style="-fx-text-fill: BLACK;" text="Choose a date" textAlignment="CENTER">
+      <Label alignment="CENTER" layoutX="57.0" layoutY="174.0" prefHeight="26.0" prefWidth="201.0" style="-fx-text-fill: BLACK;" text="Choose date" textAlignment="CENTER">
          <font>
-            <Font name="Stalin One" size="14.0" />
+            <Font name="AR DESTINE" size="26.0" />
          </font>
       </Label>
       <HBox alignment="CENTER" layoutY="490.0" prefHeight="80.0" prefWidth="320.0" spacing="100.0" style="-fx-background-color: transparent;">
