--- a/src/main/resources/SetBookingOptional.fxml
+++ b/src/main/resources/SetBookingOptional.fxml
@@ -10,37 +10,79 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="570.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.connect5_project.gui_cntrollers.SetBookingOptionalGUI">
+<AnchorPane prefHeight="570.0" prefWidth="320.0" style="-fx-background-color: BLACK;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.connect5_project.gui_cntrollers.SetBookingOptionalGUI">
    <children>
+      <ImageView fitHeight="468.0" fitWidth="320.0" layoutY="102.0">
+         <image>
+            <Image url="@images/campo_progetto.jpg" />
+         </image>
+      </ImageView>
       <HBox alignment="CENTER" prefHeight="102.0" prefWidth="320.0" style="-fx-background-color: BLACK;">
          <children>
-            <Label prefHeight="40.0" prefWidth="262.0" text="CONNECT 5" textFill="WHITE">
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="40.0" prefWidth="262.0" text="CONNECT 5" textAlignment="CENTER" textFill="WHITE">
                <font>
-                  <Font name="Stalin One" size="25.0" />
+                  <Font name="Showcard Gothic" size="38.0" />
                </font>
             </Label>
          </children>
       </HBox>
-      <Pane layoutY="102.0" prefHeight="468.0" prefWidth="320.0" style="-fx-background-color: rgb(179,252,252);">
+      <Pane layoutY="102.0" prefHeight="468.0" prefWidth="320.0" style="-fx-background-color: transparent;">
          <children>
-            <Button fx:id="btnConfirm" contentDisplay="CENTER" layoutX="115.0" layoutY="338.0" mnemonicParsing="false" onAction="#confirmBooking" prefHeight="40.0" prefWidth="90.0" style="-fx-background-color: BLACK; -fx-background-radius: 15;" text="Confirm" textAlignment="CENTER" textFill="WHITE">
+            <Button fx:id="btnConfirm" contentDisplay="CENTER" layoutX="191.0" layoutY="341.0" mnemonicParsing="false" onAction="#confirmBooking" prefHeight="40.0" prefWidth="78.0" style="-fx-background-color: BLACK; -fx-background-radius: 15;" text="Confirm" textAlignment="CENTER" textFill="WHITE">
                <font>
-                  <Font name="Sarpanch" size="12.0" />
+                  <Font name="Showcard Gothic" size="12.0" />
                </font>
             </Button>
-            <Label fx:id="labCenterName" alignment="CENTER" layoutX="39.0" prefHeight="66.0" prefWidth="242.0" text="Sport Center name" textAlignment="CENTER" wrapText="true">
+            <Label fx:id="labCenterName" alignment="CENTER" layoutX="39.0" prefHeight="66.0" prefWidth="242.0" style="-fx-text-fill: BLACK;" text="Sport Center name" textAlignment="CENTER" wrapText="true">
+               <font>
+                  <Font name="Showcard Gothic" size="20.0" />
+               </font>
+            </Label>
+            <Label fx:id="errorLab" alignment="CENTER" layoutX="30.0" layoutY="335.0" prefHeight="40.0" prefWidth="129.0" textAlignment="CENTER" textFill="RED" visible="false" wrapText="true">
+               <font>
+                  <Font name="Sarpanch" size="13.0" />
+               </font>
+            </Label>
+            <Label fx:id="labDate" alignment="CENTER" layoutX="110.0" layoutY="66.0" prefHeight="30.0" prefWidth="191.0" style="-fx-text-fill: BLACK;" textAlignment="CENTER" wrapText="true">
                <font>
                   <Font name="Stalin One" size="14.0" />
                </font>
             </Label>
-            <HBox alignment="CENTER" layoutY="388.0" prefHeight="80.0" prefWidth="320.0" spacing="100.0" style="-fx-background-color: rgb(179,252,252);">
+            <Label fx:id="labHour" alignment="CENTER" layoutX="115.0" layoutY="96.0" prefHeight="30.0" prefWidth="191.0" style="-fx-text-fill: BLACK;" textAlignment="CENTER" wrapText="true">
+               <font>
+                  <Font name="Stalin One" size="14.0" />
+               </font>
+            </Label>
+            <CheckBox fx:id="cBoxReferee" layoutX="129.0" layoutY="261.0" mnemonicParsing="false" style="-fx-text-fill: BLACK;" text="Referee">
+               <font>
+                  <Font name="Showcard Gothic" size="12.0" />
+               </font></CheckBox>
+            <CheckBox fx:id="cBoxTunics" layoutX="130.0" layoutY="296.0" mnemonicParsing="false" style="-fx-text-fill: BLACK;" text="Tunics">
+               <font>
+                  <Font name="Showcard Gothic" size="12.0" />
+               </font></CheckBox>
+            <Label alignment="CENTER" layoutX="16.0" layoutY="143.0" prefHeight="115.0" prefWidth="288.0" style="-fx-text-fill: BLACK;" text="In accordance with our policy to raise young Italian referees, you can choose if you want the presence of an official referee. it will cost you 40 euros more than the base price imposed by the sport center" textAlignment="CENTER" wrapText="true">
+               <font>
+                  <Font name="Showcard Gothic" size="12.0" />
+               </font>
+            </Label>
+            <Label alignment="CENTER" layoutX="16.0" layoutY="66.0" prefHeight="30.0" prefWidth="78.0" style="-fx-text-fill: BLACK;" text="Date" textAlignment="CENTER" wrapText="true">
+               <font>
+                  <Font name="Showcard Gothic" size="16.0" />
+               </font>
+            </Label>
+            <Label alignment="CENTER" layoutX="16.0" layoutY="96.0" prefHeight="30.0" prefWidth="78.0" style="-fx-text-fill: BLACK;" text="Hour" textAlignment="CENTER" wrapText="true">
+               <font>
+                  <Font name="Showcard Gothic" size="16.0" />
+               </font>
+            </Label>
+            <HBox alignment="CENTER" layoutY="388.0" prefHeight="80.0" prefWidth="320.0" spacing="100.0" style="-fx-background-color: transparent;">
                <children>
                   <Button fx:id="btnBack1" mnemonicParsing="false" onAction="#back" prefHeight="48.0" prefWidth="78.0" style="-fx-background-color: transparent;">
                      <graphic>
                         <ImageView fitHeight="35.0" fitWidth="45.0">
                            <image>
-                              <Image url="@images/backArrow.png" />
+                              <Image url="@images/back_24.png" />
                            </image>
                         </ImageView>
                      </graphic>
@@ -49,45 +91,13 @@
                      <graphic>
                         <ImageView fitHeight="46.0" fitWidth="48.0">
                            <image>
-                              <Image url="@images/homeImage.png" />
+                              <Image url="@images/home_24.png" />
                            </image>
                         </ImageView>
                      </graphic>
                   </Button>
                </children>
             </HBox>
-            <Label fx:id="errorLab" alignment="CENTER" layoutX="29.0" layoutY="322.0" prefHeight="40.0" prefWidth="129.0" textAlignment="CENTER" textFill="RED" visible="false" wrapText="true">
-               <font>
-                  <Font name="Sarpanch" size="13.0" />
-               </font>
-            </Label>
-            <Label fx:id="labDate" alignment="CENTER" layoutX="110.0" layoutY="66.0" prefHeight="30.0" prefWidth="191.0" textAlignment="CENTER" wrapText="true">
-               <font>
-                  <Font name="Stalin One" size="14.0" />
-               </font>
-            </Label>
-            <Label fx:id="labHour" alignment="CENTER" layoutX="115.0" layoutY="96.0" prefHeight="30.0" prefWidth="191.0" textAlignment="CENTER" wrapText="true">
-               <font>
-                  <Font name="Stalin One" size="14.0" />
-               </font>
-            </Label>
-            <CheckBox fx:id="cBoxReferee" layoutX="129.0" layoutY="261.0" mnemonicParsing="false" text="Referee" />
-            <CheckBox fx:id="cBoxTunics" layoutX="130.0" layoutY="296.0" mnemonicParsing="false" text="Tunics" />
-            <Label alignment="CENTER" layoutX="3.0" layoutY="140.0" prefHeight="115.0" prefWidth="314.0" text="In accordance with our policy to raise young Italian referees, you can choose if you want the presence of an official referee. it will cost you 40 euros more than the base price imposed by the sports center." textAlignment="CENTER" wrapText="true">
-               <font>
-                  <Font name="Sarpanch" size="14.0" />
-               </font>
-            </Label>
-            <Label alignment="CENTER" layoutX="16.0" layoutY="66.0" prefHeight="30.0" prefWidth="78.0" text="Date" textAlignment="CENTER" wrapText="true">
-               <font>
-                  <Font name="Stalin One" size="14.0" />
-               </font>
-            </Label>
-            <Label alignment="CENTER" layoutX="16.0" layoutY="96.0" prefHeight="30.0" prefWidth="78.0" text="Hour" textAlignment="CENTER" wrapText="true">
-               <font>
-                  <Font name="Stalin One" size="14.0" />
-               </font>
-            </Label>
          </children>
       </Pane>
    </children>
