--- a/src/main/resources/SetBookingOptional.fxml
+++ b/src/main/resources/SetBookingOptional.fxml
@@ -28,7 +28,7 @@
       </HBox>
       <Pane layoutY="102.0" prefHeight="468.0" prefWidth="320.0" style="-fx-background-color: transparent;">
          <children>
-            <Button fx:id="btnConfirm" contentDisplay="CENTER" layoutX="191.0" layoutY="341.0" mnemonicParsing="false" onAction="#confirmBooking" prefHeight="40.0" prefWidth="78.0" style="-fx-background-color: BLACK; -fx-background-radius: 15;" text="Confirm" textAlignment="CENTER" textFill="WHITE">
+            <Button fx:id="btnConfirm" contentDisplay="CENTER" layoutX="191.0" layoutY="343.0" mnemonicParsing="false" onAction="#confirmBooking" prefHeight="40.0" prefWidth="78.0" style="-fx-background-color: BLACK; -fx-background-radius: 15;" text="Confirm" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="Showcard Gothic" size="12.0" />
                </font>
@@ -38,30 +38,30 @@
                   <Font name="Showcard Gothic" size="20.0" />
                </font>
             </Label>
-            <Label fx:id="errorLab" alignment="CENTER" layoutX="30.0" layoutY="335.0" prefHeight="40.0" prefWidth="129.0" textAlignment="CENTER" textFill="RED" visible="false" wrapText="true">
+            <Label fx:id="errorLab" alignment="CENTER" layoutX="30.0" layoutY="341.0" prefHeight="40.0" prefWidth="129.0" textAlignment="CENTER" textFill="RED" visible="false" wrapText="true">
                <font>
                   <Font name="Sarpanch" size="13.0" />
                </font>
             </Label>
             <Label fx:id="labDate" alignment="CENTER" layoutX="110.0" layoutY="66.0" prefHeight="30.0" prefWidth="191.0" style="-fx-text-fill: BLACK;" textAlignment="CENTER" wrapText="true">
                <font>
-                  <Font name="Stalin One" size="14.0" />
+                  <Font name="Showcard Gothic" size="16.0" />
                </font>
             </Label>
-            <Label fx:id="labHour" alignment="CENTER" layoutX="115.0" layoutY="96.0" prefHeight="30.0" prefWidth="191.0" style="-fx-text-fill: BLACK;" textAlignment="CENTER" wrapText="true">
+            <Label fx:id="labHour" alignment="CENTER" layoutX="111.0" layoutY="96.0" prefHeight="30.0" prefWidth="191.0" style="-fx-text-fill: BLACK;" textAlignment="CENTER" wrapText="true">
                <font>
-                  <Font name="Stalin One" size="14.0" />
+                  <Font name="Showcard Gothic" size="16.0" />
                </font>
             </Label>
-            <CheckBox fx:id="cBoxReferee" layoutX="129.0" layoutY="261.0" mnemonicParsing="false" style="-fx-text-fill: BLACK;" text="Referee">
+            <CheckBox fx:id="cBoxReferee" layoutX="85.0" layoutY="259.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" style="-fx-text-fill: BLACK;" text="Referee   (+40  €)">
                <font>
-                  <Font name="Showcard Gothic" size="12.0" />
+                  <Font name="Showcard Gothic" size="14.0" />
                </font></CheckBox>
-            <CheckBox fx:id="cBoxTunics" layoutX="130.0" layoutY="296.0" mnemonicParsing="false" style="-fx-text-fill: BLACK;" text="Tunics">
+            <CheckBox fx:id="cBoxTunics" layoutX="85.0" layoutY="299.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" style="-fx-text-fill: BLACK;" text="Tunics      (+10  €)">
                <font>
-                  <Font name="Showcard Gothic" size="12.0" />
+                  <Font name="Showcard Gothic" size="14.0" />
                </font></CheckBox>
-            <Label alignment="CENTER" layoutX="16.0" layoutY="143.0" prefHeight="115.0" prefWidth="288.0" style="-fx-text-fill: BLACK;" text="In accordance with our policy to raise young Italian referees, you can choose if you want the presence of an official referee. it will cost you 40 euros more than the base price imposed by the sport center" textAlignment="CENTER" wrapText="true">
+            <Label alignment="CENTER" layoutX="16.0" layoutY="149.0" prefHeight="115.0" prefWidth="288.0" style="-fx-text-fill: BLACK;" text="In accordance with our policy to raise young Italian referees, you can choose if you want the presence of an official referee. it will cost you 40 euros more than the base price imposed by the sport center" textAlignment="CENTER" wrapText="true">
                <font>
                   <Font name="Showcard Gothic" size="12.0" />
                </font>
@@ -98,6 +98,16 @@
                   </Button>
                </children>
             </HBox>
+            <Label alignment="CENTER" layoutX="16.0" layoutY="126.0" prefHeight="30.0" prefWidth="78.0" style="-fx-text-fill: BLACK;" text="PRICE" textAlignment="CENTER" wrapText="true">
+               <font>
+                  <Font name="Showcard Gothic" size="16.0" />
+               </font>
+            </Label>
+            <Label fx:id="labPrice" alignment="CENTER" layoutX="111.0" layoutY="126.0" prefHeight="30.0" prefWidth="191.0" style="-fx-text-fill: BLACK;" textAlignment="CENTER" wrapText="true">
+               <font>
+                  <Font name="Showcard Gothic" size="16.0" />
+               </font>
+            </Label>
          </children>
       </Pane>
    </children>
