--- a/src/main/resources/CreateAccount.fxml
+++ b/src/main/resources/CreateAccount.fxml
@@ -36,7 +36,7 @@
                   <Font name="Stalin One" size="9.0" />
                </font>
             </Label>
-            <Button fx:id="btnConfirmCreate" layoutX="189.0" layoutY="347.0" mnemonicParsing="false" onAction="#confirmCreate" prefHeight="34.0" prefWidth="71.0" style="-fx-background-color: BLACK; -fx-background-radius: 15;" text="Confirm" textFill="#fffdfd">
+            <Button fx:id="btnConfirmCreate" layoutX="189.0" layoutY="347.0" mnemonicParsing="false"  prefHeight="34.0" prefWidth="71.0" style="-fx-background-color: BLACK; -fx-background-radius: 15;" text="Confirm" textFill="#fffdfd">
                <font>
                   <Font name="Sarpanch" size="12.0" />
                </font>
