--- a/src/main/resources/SearchSportCenters.fxml
+++ b/src/main/resources/SearchSportCenters.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="570.0" prefWidth="320.0" style="-fx-background-color: GREEN;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.connect5_project.take_booking.view.GUI.SearchSportCentersGUI">
+<AnchorPane prefHeight="570.0" prefWidth="320.0" style="-fx-background-color: GREEN;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.connect5_project.take_booking.view.gui.SearchSportCentersGUI">
    <children>
       <ImageView fitHeight="468.0" fitWidth="320.0" layoutY="102.0">
          <image>
