--- a/src/main/resources/BookingResponse.fxml
+++ b/src/main/resources/BookingResponse.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="570.0" prefWidth="320.0" style="-fx-background-color: BLACK;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.connect5_project.take_booking.view.GUI.BookingResponseGUI">
+<AnchorPane prefHeight="570.0" prefWidth="320.0" style="-fx-background-color: BLACK;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.connect5_project.take_booking.view.gui.BookingResponseGUI">
    <children>
       <ImageView fitHeight="468.0" fitWidth="320.0" layoutY="102.0">
          <image>
