--- a/src/main/resources/EnterAsGuest.fxml
+++ b/src/main/resources/EnterAsGuest.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="570.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.connect5_project.take_booking.view.GUI.LoggedGUI">
+<AnchorPane prefHeight="570.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.connect5_project.take_booking.view.gui.LoggedGUI">
    <children>
       <HBox alignment="CENTER" prefHeight="102.0" prefWidth="320.0" style="-fx-background-color: BLACK;">
          <children>
@@ -39,7 +39,7 @@
             </VBox>
             <HBox alignment="CENTER" layoutY="388.0" prefHeight="80.0" prefWidth="320.0" spacing="100.0">
                <children>
-                  <ImageView fitHeight="35.0" fitWidth="45.0" onMouseReleased="#back">
+                  <ImageView fitHeight="35.0" fitWidth="45.0">
                      <image>
                         <Image url="@images/backArrow.png" />
                      </image>
